# CTVirtualMachine

./: CMakeLists.txt
include/: defines.h
include/bytecode/: bytecodeheader.h  module.h  subroutine.h
include/core/: constpool.h  register.h  stack.h  string.h  value.h  vm.h
include/executor/: code.h  context.h
include/memory/: object.h
include/util/: fileutils.h  pointer.h  vector.h
src/: main.c
src/bytecode/: module.c
src/core/: stack.c  string.c  vm.c
src/executor/: code.c  context.c  instruction.c
src/util/: fileutils.c  vector.c
